--- a/404.html
+++ b/404.html
@@ -1,1 +1,18 @@
-这是错误页面哦！
+<html>
+  <head>
+    <title>页面被抓走了啊</title>
+    <style type="text/css">
+      .content
+      {
+        font-size:28px;
+        margin:25%;
+        color:blue;
+      }
+    </style>
+  </head>
+  <body>
+   <div class="content">
+      天呐！这个页面竟然被外星人抓走了？难道真的有外星人？
+    </div>
+  </body>
+</html>
