--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
       .content
       {
         font-size:28px;
-        margin:25%;
+        margin:10% 25%;
         color:blue;
       }
     </style>
