--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
       天呐！这个页面竟然被外星人抓走了？难道真的有外星人？
     </div>
     <div style="font-size:28px;margin:20px">
-      <a href="https://peishikai.github.com">点击即可返回网站首页</a>
+      <a href="https://peishikai.github.io">点击即可返回网站首页</a>
     </div>
   </body>
 </html>
