--- a/recommend.html
+++ b/recommend.html
@@ -8,13 +8,13 @@
     <link href="~/../stylesheets/common.css" rel="stylesheet" type="text/css">
     <link href="~/../stylesheets/wangzhi.css" rel="stylesheet" type="text/css">
     <script src="~/../javascripts/move.js"></script>
-    <title>欢迎访问万事有我</title>
+    <title>有我在</title>
 </head>
 <body>
     <header id="header">
         <marquee behavior="alternate" style="font-size: 22px; color: yellow;">广告位100000招租,哈哈</marquee>
         <div style="text-align: center; float: left; margin-left: 7%; margin-top: -10px; margin-right: 10px; font-size: 20px; color: #fff">
-            万事有我
+            有我在
                 <h3 style="margin: 0px;">peishikai.github.io</h3>
         </div>
         <ul>
