--- a/recommend.html
+++ b/recommend.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/影响力.pdf" target="_blank">
-                                <img alt="影响力" src="book/yingxiang.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">谁说你没有影响力</p>
+                                <img alt="影响力" src="book/yingxiang.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">影响力</p>
                             </a>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                         </div>
                         <div class="item" style="overflow: hidden; width: 120px; height: 190px">
                             <a href="http://www.iqiyi.com/v_19rrn4nzj8.html" target="_blank">
-                                <img src="yingshi/wodemingzijiaokehan.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">我的名字叫，可汗</p>
+                                <img src="yingshi/wodemingzijiaokehan.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">我的名字叫可汗</p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 120px; height: 190px">
