--- a/recommend.html
+++ b/recommend.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/每周工作4小时.pdf" target="_blank">
-                                <img alt="每周工作4小时" src="book/meizhou.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">每周工作4小时</p>
+                                <img alt="每周工作4小时" src="book/meizhou.jpg" /><p style="text-alin:center;margin-top: 0px; font-size: 20px; overflow: hidden">每周工作4小时</p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
@@ -84,7 +84,7 @@
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/影响力.pdf" target="_blank">
-                                <img alt="影响力" src="book/yingxiang.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">影响力</p>
+                                <img alt="影响力" src="book/yingxiang.jpg" /><p style="text-alin:center;margin-top: 0px; font-size: 20px; overflow: hidden">影响力</p>
                             </a>
                         </div>
                     </div>
