--- a/recommend.html
+++ b/recommend.html
@@ -54,37 +54,37 @@
                     <div class="shu">
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/悟空传.pdf" target="_blank">
-                                <img alt="悟空传" src="book/wukongzhuan.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">悟空传--今何在 </p>
+                                <img alt="悟空传" src="book/wukongzhuan.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">悟空传--今何在 </p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/邻家的百万富翁.pdf" target="_blank">
-                                <img alt="邻家的百万富翁" src="book/linjiabaiwan.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">邻家的百万富翁 </p>
+                                <img alt="邻家的百万富翁" src="book/linjiabaiwan.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">邻家的百万富翁 </p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/每周工作4小时.pdf" target="_blank">
-                                <img alt="每周工作4小时" src="book/meizhou.jpg" /><p style="text-alin:center;margin-top: 0px; font-size: 20px; overflow: hidden">每周工作4小时</p>
+                                <img alt="每周工作4小时" src="book/meizhou.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">每周工作4小时</p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/人性的弱点.pdf" target="_blank">
-                                <img alt="人性的弱点" src="book/renxing.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">人性的弱点</p>
+                                <img alt="人性的弱点" src="book/renxing.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">人性的弱点</p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/谁动了我的奶酪.pdf" target="_blank">
-                                <img alt="谁动了我的奶酪" src="book/shuidong.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">谁动了我的奶酪</p>
+                                <img alt="谁动了我的奶酪" src="book/shuidong.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">谁动了我的奶酪</p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/小狗钱钱.pdf" target="_blank">
-                                <img alt="小狗钱钱" src="book/xiaogou.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden">小狗钱钱</p>
+                                <img alt="小狗钱钱" src="book/xiaogou.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">小狗钱钱</p>
                             </a>
                         </div>
                         <div class="item" style="overflow: hidden; width: 140px; height: 270px">
                             <a href="book/影响力.pdf" target="_blank">
-                                <img alt="影响力" src="book/yingxiang.jpg" /><p style="text-alin:center;margin-top: 0px; font-size: 20px; overflow: hidden">影响力</p>
+                                <img alt="影响力" src="book/yingxiang.jpg" /><p style="margin-top: 0px; font-size: 20px; overflow: hidden; text-align: center">影响力</p>
                             </a>
                         </div>
                     </div>
